# rapidfireai

./: .buildignore  .dockerignore  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile-kami  MANIFEST.in  README.md  TRL_INTEGRATION_PLAN.md  build_and_install.sh  bump_version.sh  docker-build.sh  docker-compose.yml  interactive_rebase_squash.sh  private.pem  pyproject.toml  pyproject_old.toml  rapidfire_pids.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  start-docker.sh  test-build-locally.sh  test_mode_guard.py  trackio_integration_article.plan.md
.cursor/: BUGBOT.md
.cursor/plans/: trackio_demo_notebook.plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: deploy-pypi.yml  deploy-testpypi.yml  manual-deploy.yml
community_notebooks/: ACKNOWLEDGMENTS.txt  README.md  rag-fiqa-context-optimization.ipynb  rag-nfcorpus-biomedical-qa.ipynb  rag-qasper-scientific-paper-qa.ipynb  rag-ucsb-course-catalog.ipynb  rag_fiqa_context_optimization.ipynb  rag_fiqa_mrr_optimization.ipynb  rag_nfcorpus_biomedical_qa.ipynb  rag_qasper_scientific_paper_qa.ipynb  rag_ucsb_course_catalog.ipynb  sft-child-facing-chatbot.ipynb  sft-cybersecurity-qa.ipynb  sft-ecommerce-retail-chatbot.ipynb  sft-pii-masking-redaction.ipynb  sft_child_facing_chatbot.ipynb  sft_cybersecurity_qa.ipynb  sft_ecommerce_retail_chatbot.ipynb  sft_pii_masking_redaction.ipynb
docs/: AGENTS.md  BUILD.md  CONTRIBUTING.md  CodeFlow.md  DEVELOPER.md
ide-context/: CLAUDE.md  README.md  install.ps1  install.sh
rapidfireai/: __init__.py  cli.py  experiment.py  start.sh  start_colab.py  start_dev.sh  version.py
rapidfireai/automl/: __init__.py  automl_utils.py  base.py  callbacks.py  datatypes.py  grid_search.py  model_config.py  optuna_search.py  random_search.py
rapidfireai/backend/: CLAUDE.md  chunks.py  controller.py  scheduler.py  worker.py
rapidfireai/db/: CLAUDE.md  __init__.py  db_interface.py  migrate_add_experiment_id.sql  rf_db.py  tables.sql
rapidfireai/dispatcher/: CLAUDE.md  __init__.py  dispatcher.py  gunicorn.conf.py
rapidfireai/evals/: experiment.py  trajectory.py
rapidfireai/fit/: start_dev.sh
rapidfireai/frontend/: .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  craco.config.js  index.html  package.json  proxy_middleware.py  server.py
rapidfireai/infer/: experiment.py
rapidfireai/llm/: LLM_CHAT_SPEC.md  client.py  handler.py  tools.py
rapidfireai/metrics/: __init__.py  metric_logger.py  metric_mlflow_manager.py  metric_rfmetric_manager.py  metric_tensorboard_manager.py  metric_trackio_manager.py
rapidfireai/ml/: callbacks.py  checkpoint_utils.py  trainer.py
rapidfireai/platform/: __init__.py  doctor.py  gpu_info.py  python_info.py
rapidfireai/utils/: CLAUDE.md  __init__.py  colab.py  colab_helper.py  colab_interactive_controller.py  constants.py  dispatcher_utils.py  distributed_utils.py  doctor.py  exceptions.py  experiment_utils.py  interactive_controller.py  logging.py  metric_logger.py  metric_mlflow_manager.py  metric_rfmetric_manager.py  metric_tensorboard_manager.py  metric_trackio_manager.py  mlflow_manager.py  mode_utils.py  os_info.py  os_utils.py  ping.py  serialize.py  shm_manager.py  trainer_config.py  worker_manager.py
sanity/scripts/: rf-tutorial-sft-chatqa-sanity-1.ipynb
sanity/tests/: test_rf_sft_sanity.py
scripts/: 2_install_ml_packages.sh  trial.ipynb
setup/: build_frontend.sh  bump_version.sh  overrides.txt  requirements.txt  start.sh
setup/evals/: 1_setup_conda.sh  override-colab.txt  requirements-colab.txt  requirements-local copy.txt  requirements-local.txt  requirements.txt  start.sh
setup/fit/: 1_setup_miniconda_python312.sh  README.md  build_and_install.sh  build_frontend.sh  bump_version.sh  override-colab.txt  override-local.txt  requirements-colab.txt  requirements-local.txt  requirements.txt  start.sh  start_dev.sh
setup/infer/: 2_setup_conda_env.sh  setup.sh
setup/rapidfireai/: requirements-colab.txt  requirements-local.txt  requirements.txt
tests/: conftest.py  fix_notebooks.py  test_chunks.py  test_experiment.py  test_ide_context.py  test_metric_logger.py  test_mlflow_status_parity.py  test_mode_utils.py  test_optuna.py  test_pipeline_scheduler.py  test_rf_db_get_all_pipelines.py  test_scheduler.py
tests/notebooks/: rf-tutorial-optuna-sft-chatqa-tiny.ipynb  rf-tutorial-sft-chatqa-tiny.ipynb
tools/: repro_scheduler_wedge.py
tutorial_notebooks/: COLAB_QUICKSTART.ipynb  COLAB_SETUP.md  TEST_COLAB_INSTALLATION.ipynb  rf-colab-tensorboard-tutorial.ipynb  rf-tutorial-dpo-alignment-lite.ipynb  rf-tutorial-dpo-alignment.ipynb  rf-tutorial-dpo-fsdp-alignment.ipynb  rf-tutorial-grpo-fsdp-mathreasoning.ipynb  rf-tutorial-grpo-mathreasoning-fsdp-lite.ipynb  rf-tutorial-grpo-mathreasoning-fsdp.ipynb  rf-tutorial-grpo-mathreasoning-lite.ipynb  rf-tutorial-grpo-mathreasoning.ipynb  rf-tutorial-optuna-sft-chatqa-tiny.ipynb  rf-tutorial-sft-chatqa-fsdp-lite.ipynb  rf-tutorial-sft-chatqa-fsdp.ipynb  rf-tutorial-sft-chatqa-lite.ipynb  rf-tutorial-sft-chatqa.ipynb  rf-tutorial-sft-fsdp-lite.ipynb  rf-tutorial-sft-fsdp_lite.ipynb  rf-tutorial-sft-trackio.ipynb
tutorial_notebooks/dpo_alignment/: rf-tutorial-dpo-alignment-fsdp-lite.ipynb
tutorial_notebooks/evals/: rf-tutorial-gsm8k-fewshot.ipynb  rf-tutorial-rag-fiqa.ipynb  rf-tutorial-scifact-full-evaluation.ipynb  trial-context-generator-colab-t4.ipynb  trial-context-generator-hybrid.ipynb  trial-context-generator-local.ipynb  trial-context-generator-openai.ipynb  trial-infer.ipynb  trial-online.ipynb  trial-rag-langchain.ipynb
tutorial_notebooks/fine-tuning/: Co-Announcement Blog Trackio and RapidFire AI.md  README.md  rf-colab-tensorboard-tutorial.ipynb  rf-colab-trackio-tutorial.ipynb  rf-tutorial-optuna-sft-chatqa-tiny.ipynb  rf-tutorial-sft-chatqa-fsdp-large.ipynb  rf-tutorial-sft-chatqa-fsdp-lite.ipynb  rf-tutorial-sft-chatqa-fsdp.ipynb  rf-tutorial-sft-chatqa-lite.ipynb  rf-tutorial-sft-chatqa.ipynb  rf-tutorial-sft-trackio.ipynb
(+329 files in other folders)
