[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidfireai"
version = "0.11.1"
authors = [
    {name = "RapidFire AI Inc.", email = "support@rapidfire.ai"},
]
description = "RapidFire AI: Rapid Experimentation Engine for Customizing LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["ai", "rapidfire", "rapidfireai", "llm", "deep-learning", "artificial-intelligence", "machine-learning", "mlflow", "experiment-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Core ML/AI Framework
    "torch==2.5.1",
    "torchvision",
    "torchaudio",
    "transformers",
    "datasets==3.6.0",
    "sentence-transformers",
    "gpustat",

    # Distributed Computing
    "ray",

    # LLM Inference
    "flashinfer-python",
    "transformers>=4.55.2",

    # OpenAI API
    "openai",
    "tiktoken",

    # LangChain Ecosystem
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain-huggingface",

    # Vector Search
    "faiss-gpu-cu12",

    # Statistical Analysis
    "scipy",

    # Data Manipulation & Display
    "pandas>=2.0.0,<2.3.0",  # Colab compatibility (2.2.2) and cudf constraint
    # "pandas",
    "pyarrow",
    "numpy",
    "unstructured",

    # REST API (Dispatcher)
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "waitress",

    # Notebook
    "ipykernel",
    "ipywidgets>=7.3.4,<9.0.0",  # Support both v7 (Colab) and v8 (Jupyter)
    "tensorboard>=2.11.0",

    # JSON Query Tool
    "jq",

    # Other
    "psutil",
    "watiress",
    "tqdm",
    "typing-extensions>=4.0.0",
    "peft>=0.17.0",
    "trl==0.21.0",
    "bitsandbytes>=0.47.0",
    "nltk>=3.9.1",
    "evaluate>=0.4.5",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.1",
    "dill>=0.3.8",
    "mlflow>=3.2.0",
    "pytest>=8.4.1",
    "requests>=2.32.0",  # Relaxed for Colab (2.32.4)
    "loguru>=0.7.3",
    "ipython>=7.34.0",  # Colab compatibility (7.34.0)
    "jupyter>=1.1.1",
    "uv>=0.8.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.12.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
    "ruff",
]
full = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "peft>=0.3.0",
    "trl==0.21.0",
    "bitsandbytes>=0.39.0",
]

[project.urls]
Homepage = "https://rapidfire.ai"
Documentation = "https://oss-docs.rapidfire.ai"
Repository = "https://github.com/RapidFireAI/rapidfireai"


[project.scripts]
rapidfireai = "rapidfireai.cli:main"

[tool.setuptools]
packages = ["rapidfireai"]
include-package-data = true

[tool.setuptools.package-data]
rapidfireai = [
    "fit/dispatcher/*.py",
    "fit/frontend/build/**/*",
    "fit/frontend/server.py",
    "fit/frontend/proxy_middleware.py",
    "fit/ml/*.py",
    "fit/automl/*.py",
    "fit/backend/*.py",
    "fit/db/*.py",
    "fit/db/*.sql",
    "fit/utils/*.py",
    "evals/actors/*.py",
    "evals/automl/*.py",
    "evals/data/*.py",
    "evals/db/*.py",
    "evals/db/*.sql",
    "evals/dispatcher/*.py",
    "evals/metrics/*.py",
    "evals/rag/*.py",
    "evals/scheduling/*.py",
    "evals/utils/*.py",
    "evals/*.py",
    "../setup/fit/start.sh",
    "../setup/fit/start_dev.sh",
    "../tutorial_notebooks/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "**/node_modules/**/*",
    "**/.yarn/**/*",
    "**/dist/**/*",
    "**/coverage/**/*",
    "**/.nyc_output/**/*",
    "**/.cache/**/*",
    "**/.next/**/*",
    "**/out/**/*",
    "**/.env*",
    "**/*.log",
    "**/__pycache__/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "**/.DS_Store",
    "**/.git*",
    "**/.svn*",
    "**/*.egg-info/**/*",
    "**/.pytest_cache/**/*",
    "**/.coverage",
    "**/htmlcov/**/*",
    "**/.tox/**/*",
    "**/.venv/**/*",
    "**/venv/**/*",
    "**/venv311/**/*",
]

[tool.setuptools.package-dir]
rapidfireai = "rapidfireai"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
targer-version = "py312"