[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidfireai"
version = "0.14.0"
authors = [
    {name = "RapidFire AI Inc.", email = "support@rapidfire.ai"},
]
description = "RapidFire AI: Rapid experimentation for easier, faster, and more impactful AI customization. Built for agentic RAG, context engineering, fine-tuning, and post-training of LLMs and other DL models. "
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["ai", "rapidfire", "rapidfireai", "llm", "deep-learning", "artificial-intelligence", "machine-learning", "mlflow", "experiment-tracking", "fine-tuning", "post-training", "rag", "context-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "uv"
]

# [project.optional-dependencies]
# TODO: update these dependencies to the correct versions

[project.urls]
Homepage = "https://rapidfire.ai"
Documentation = "https://oss-docs.rapidfire.ai"
Repository = "https://github.com/RapidFireAI/rapidfireai"


[project.scripts]
rapidfireai = "rapidfireai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rapidfireai", "rapidfireai.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rapidfireai = [
    "automl/*.py",
    "fit/dispatcher/*.py",
    "frontend/build/**/*",
    "frontend/server.py",
    "frontend/proxy_middleware.py",
    "fit/ml/*.py",
    "fit/automl/*.py",
    "fit/backend/*.py",
    "fit/db/*.py",
    "fit/db/*.sql",
    "fit/utils/*.py",
    "evals/actors/*.py",
    "evals/automl/*.py",
    "evals/data/*.py",
    "evals/db/*.py",
    "evals/db/*.sql",
    "evals/dispatcher/*.py",
    "evals/metrics/*.py",
    "evals/rag/*.py",
    "evals/scheduling/*.py",
    "evals/utils/*.py",
    "evals/*.py",
    "utils/*.py",
    "../setup/start.sh",
    "../setup/requirements.txt",
    "../setup/overrides.txt",
    "../setup/fit/start_dev.sh",
    "../setup/fit/requirements-*.txt",
    "../setup/fit/override-*.txt",
    "../setup/evals/requirements-*.txt",
    "../setup/evals/override-*.txt",
    "../tutorial_notebooks/**/*",
    "../tests/notebooks/*",

]


[tool.setuptools.exclude-package-data]
"*" = [
    "**/node_modules/**/*",
    "**/.yarn/**/*",
    "**/dist/**/*",
    "**/coverage/**/*",
    "**/.nyc_output/**/*",
    "**/.cache/**/*",
    "**/.next/**/*",
    "**/out/**/*",
    "**/.env*",
    "**/*.log",
    "**/__pycache__/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "**/.DS_Store",
    "**/.git*",
    "**/.svn*",
    "**/*.egg-info/**/*",
    "**/.pytest_cache/**/*",
    "**/.coverage",
    "**/htmlcov/**/*",
    "**/.tox/**/*",
    "**/.venv/**/*",
    "**/venv/**/*",
    "**/venv311/**/*",
]

[tool.setuptools.package-dir]
rapidfireai = "rapidfireai"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
targer-version = "py312"